fix overflow

--- a/kono-front/src/styles/RoomDiscoBall.module.scss
+++ b/kono-front/src/styles/RoomDiscoBall.module.scss
@@ -1,5 +1,44 @@
 @import 'mixins/all';
 
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+    transform-origin: 272px 302px 0;
+  }
+  12% {
+    transform: scale(1.03);
+    transform-origin: 272px 302px 0;
+  }
+  25% {
+    transform: scale(1);
+    transform-origin: 272px 302px 0;
+  }
+  37% {
+    transform: scale(1.03);
+    transform-origin: 272px 302px 0;
+  }
+  50% {
+    transform: scale(1);
+    transform-origin: 272px 302px 0;
+  }
+  62% {
+    transform: scale(1.03);
+    transform-origin: 272px 302px 0;
+  }
+  75% {
+    transform: scale(1);
+    transform-origin: 272px 302px 0;
+  }
+  87% {
+    transform: scale(1.03);
+    transform-origin: 272px 302px 0;
+  }
+  100% {
+    transform: scale(1);
+    transform-origin: 272px 302px 0;
+  }
+}
+
 @keyframes rotate {
   0%    {transform: rotateX(0) rotateY(0) rotateZ(0);}
   100%  {transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);}
@@ -17,11 +56,11 @@ $dur: 10s;
 }
   
 @mixin view($p) {
-  position: relative;
-  // top: 0;
-  // left: 0;
-  // right: 0;
-  // bottom: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   perspective: $p;
 }
 
@@ -36,6 +75,7 @@ $dur: 10s;
 
 @include themed() {
   .discoBall{
+    animation: bounce 2s infinite;
 
     .view {
       @include view(400);
