--- a/kono-front/src/styles/RoomStatePanel.module.scss
+++ b/kono-front/src/styles/RoomStatePanel.module.scss
@@ -17,7 +17,7 @@
 @include themed() {
 
     .RoomStatePanel {
-
+        overflow: visible;
         position: absolute;
         top: 0;
         left: 30px;
